Bug 379539 - SMTP fails with "the proxy type is invalid for this operation"
Summary: SMTP fails with "the proxy type is invalid for this operation"
Status: RESOLVED FIXED
Alias: None
Product: kmailtransport
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-05 07:55 UTC by Tom Kuther
Modified: 2018-03-02 14:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Kuther 2017-05-05 07:55:13 UTC
I'm tying to use KMail 17.04 on Archlinux, Qt 5.8.0, in a corporate network with a foward proxy in place.

My system has http(s)_proxy and no_proxy configured both on system level and in systemsettings.

The SMTP server is on the local network and covered by no_proxy.

Sending a message results in:

"Failed to transport message. smtp.internaldomain.com: the proxy type is invalid for this operation"

This seems related: https://bugreports.qt.io/browse/QTBUG-58706
Comment 1 Kwanza.Pili 2017-10-22 16:29:12 UTC
I have exactly the same problem, but I use newer versions of the relevant software:

QT 5.9.2
kmail-17.08.2
kmailtransport-17.08.2

Why on earth does kmail try to use the proxy? Is there a way to stop kmail from doing so without affecting konqueror and the other applications that really so use the proxy server?
Comment 2 Jonathan Marten 2017-11-08 20:31:16 UTC
Confirmed with current Git master.
Suspect same root cause as bug 373870.
Comment 3 Jonathan Marten 2018-03-02 14:23:52 UTC
Git commit f6b366e82644e63d4d698607c897af33fa0e72df by Jonathan Marten.
Committed on 02/03/2018 at 14:23.
Pushed by marten into branch 'master'.

Settings for SMTP network proxy option

Differential Revision: https://phabricator.kde.org/D10940

M  +5    -0    src/session.cpp
M  +11   -3    src/session.h
M  +20   -1    src/sessionthread.cpp
M  +3    -0    src/sessionthread_p.h

https://commits.kde.org/ksmtp/f6b366e82644e63d4d698607c897af33fa0e72df
Comment 4 Jonathan Marten 2018-03-02 14:28:44 UTC
Git commit b536593f5bfa96458c1a45bd5a6e5500efd00231 by Jonathan Marten.
Committed on 02/03/2018 at 14:25.
Pushed by marten into branch 'master'.

Mail transport setting and GUI for the SMTP proxy option

This is the GUI for the option, appearing on the "Advanced" tab
of the resource configuration dialogue.  The setting is take
from the transport configuration and set for the SMTP session.

Differential Revision: https://phabricator.kde.org/D10941

M  +5    -0    src/kmailtransport/mailtransport.kcfg
M  +1    -0    src/kmailtransport/plugins/smtp/smtpjob.cpp
M  +7    -0    src/kmailtransport/plugins/smtp/smtpsettings.ui

https://commits.kde.org/kmailtransport/b536593f5bfa96458c1a45bd5a6e5500efd00231