Mail transport setting and GUI for the SMTP proxy option

This is the GUI for the option, appearing on the "Advanced" tab
of the resource configuration dialogue.  The setting is take
from the transport configuration and set for the SMTP session.

BUG: 379539

Differential Revision: https://phabricator.kde.org/D10941